--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -16,3 +16,18 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+
+.loader {
+  border: 4px solid #f3f3f3; /* Color de fondo del spinner */
+  border-top: 4px solid #3498db; /* Color de la parte animada */
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
